Add task list modes
